--- a/package.json
+++ b/package.json
@@ -16,9 +16,16 @@
     "axios-https-proxy-fix": "^0.17.1",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "got": "^11.5.2",
     "helmet": "^3.23.3",
+    "mysql2": "^2.2.5",
+    "nodemon": "^2.0.5",
+    "os": "^0.1.1",
+    "redis": "^3.0.2",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "tough-cookie": "^4.0.0",
     "tunnel": "0.0.6"
   }
